Set dependencies and timeout to resolve WifiManager error. See: https://github.com/tzapu/WiFiManager/issues/1540#issuecomment-1974946727

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,9 +17,9 @@ monitor_port = COM5
 monitor_speed = 115200
 lib_ldf_mode = deep
 lib_deps = 
-	https://github.com/tzapu/WiFiManager.git
-	https://github.com/ktos/RemoteDebug.git
-	knolleary/PubSubClient
+	https://github.com/tzapu/WiFiManager.git@2.0.17
+	https://github.com/ktos/RemoteDebug.git@3.0.7
+	knolleary/PubSubClient@2.8
 	bblanchon/ArduinoJson@^7.1.0
 	links2004/WebSockets@^2.3.6
 	paulstoffregen/Time@^1.6.1
