--- a/platformio.ini
+++ b/platformio.ini
@@ -37,6 +37,7 @@ build_flags =
   -D EN_PIN=0
   -D LED_PIN=2
   -D SPA_SERIAL=Serial2
+  -D CT_CLAMP=1
 
 [env:spa-control-pcb]
 extends = env:spa-base
