--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32dev, spa-control-pcb
+default_envs = esp32dev, spa-control-pcb, esp32dev-ctclamp, spa-control-pcb-ctclamp
 
 [env:spa-base]
 framework = arduino
@@ -17,7 +17,6 @@ monitor_speed = 115200
 lib_ldf_mode = deep
 lib_deps = 
   https://github.com/ktos/RemoteDebug.git@3.0.7
-  https://github.com/lucasnz/EmonLib.git@^1.1.1
   tzapu/WiFiManager@^2.0.17
   knolleary/PubSubClient@^2.8
   bblanchon/ArduinoJson@^7.1.0
@@ -38,7 +37,6 @@ build_flags =
   -D EN_PIN=0
   -D LED_PIN=2
   -D SPA_SERIAL=Serial2
-  -D CT_CLAMP=1
 
 [env:spa-control-pcb]
 extends = env:spa-base
@@ -52,3 +50,29 @@ build_flags =
   -D EN_PIN=0
   -D LED_PIN=14
   -D SPA_SERIAL=Serial2
+
+[env:esp32dev-ctclamp]
+extends = env:spa-base
+platform = espressif32
+board = esp32dev
+build_flags =
+  -D RX_PIN=16
+  -D TX_PIN=17
+  -D EN_PIN=0
+  -D LED_PIN=2
+  -D SPA_SERIAL=Serial2
+  -D CT_CLAMP_PIN=34
+
+[env:spa-control-pcb-ctclamp]
+extends = env:spa-base
+platform = espressif32
+board = esp32-s3-devkitc-1
+build_flags =
+  -D ARDUINO_USB_CDC_ON_BOOT=1
+  -D SPACTRLPCB=1
+  -D RX_PIN=16
+  -D TX_PIN=15
+  -D EN_PIN=0
+  ;-D LED_PIN=14
+  -D SPA_SERIAL=Serial2
+  -D CT_CLAMP_PIN=10
