Rename custom PCB baords in platformio

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32dev, spa-control-pcb, esp32dev-ctclamp, spa-control-pcb-ctclamp
+default_envs = esp32dev, eSpa-mini-pcb, esp32dev-ctclamp, eSpa-max-pcb
 
 [env:spa-base]
 framework = arduino
@@ -38,7 +38,7 @@ build_flags =
   -D LED_PIN=2
   -D SPA_SERIAL=Serial2
 
-[env:spa-control-pcb]
+[env:eSpa-mini-pcb]
 extends = env:spa-base
 platform = espressif32
 board = esp32-s3-devkitc-1
@@ -63,7 +63,7 @@ build_flags =
   -D SPA_SERIAL=Serial2
   -D CT_CLAMP_PIN=34
 
-[env:spa-control-pcb-ctclamp]
+[env:eSpa-max-pcb]
 extends = env:spa-base
 platform = espressif32
 board = esp32-s3-devkitc-1
