--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ monitor_speed = 115200
 lib_ldf_mode = deep
 lib_deps = 
   https://github.com/ktos/RemoteDebug.git@3.0.7
+  https://github.com/lucasnz/EmonLib.git@^1.1.1
   tzapu/WiFiManager@^2.0.17
   knolleary/PubSubClient@^2.8
   bblanchon/ArduinoJson@^7.1.0
@@ -37,6 +38,7 @@ build_flags =
   -D EN_PIN=0
   -D LED_PIN=2
   -D SPA_SERIAL=Serial2
+  -D CT_CLAMP=1
 
 [env:spa-control-pcb]
 extends = env:spa-base
