ESP32 dev board - 4MB board partition table update

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,6 +34,7 @@ extra_scripts =
 extends = env:spa-base
 platform = espressif32
 board = esp32dev
+board_build.partitions = esp32-dev-4MB.csv
 build_flags =
   -D RX_PIN=16
   -D TX_PIN=17
